# uss-hiring-tasks

./: .gitignore  README.md  pyproject.toml
src/: app.py  predictor.py
